Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/Staging_National_Account__c.object-meta.xml
<CustomObject>
    <label>Staging National Account</label>
    <nameField>
        <label>Staging National Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging National Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>