Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Staging_National_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>