Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/BusinessSubType__c.field-meta.xml
<CustomField>
    <fullName>BusinessSubType__c</fullName>
    <label>Business Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Category</valueSetName>
    </valueSet>
</CustomField>