Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>Business Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IP_Business_Type</valueSetName>
    </valueSet>
</CustomField>