Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Company_Name_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Invoice__c</fullName>
    <label>Company Name (Invoice)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>