Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Contact</fullName>
            </value>
            <value>
                <fullName>Budget Holder</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>