Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>200</length>
    <type>Text</type>
</CustomField>