Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <label>Date Request Actioned</label>
    <type>DateTime</type>
</CustomField>