Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/DBS_Check__c.field-meta.xml
<CustomField>
    <fullName>DBS_Check__c</fullName>
    <label>DBS Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS Basic</fullName>
            </value>
            <value>
                <fullName>DBS - Standard Check</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Adult Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Child &amp; Adult Workforce</fullName>
            </value>
            <value>
                <fullName>DBS Enhanced: Child Workforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>