Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Invoice_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address_Line_3__c</fullName>
    <label>Invoice Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>