Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Invoice_Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Country__c</fullName>
    <label>Invoice Contact Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>