Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Invoice_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Email__c</fullName>
    <label>Invoice Contact Email</label>
    <type>Email</type>
</CustomField>