Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Invoice_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Name__c</fullName>
    <label>Invoice Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>