Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Invoice_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Phone__c</fullName>
    <label>Invoice Contact Phone</label>
    <type>Phone</type>
</CustomField>