Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Invoice_Contact_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Postcode__c</fullName>
    <label>Invoice Contact Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>