Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Invoice_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PO_Number__c</fullName>
    <label>Invoice PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>