Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Main_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact (Lookup)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staging National Accounts</relationshipLabel>
    <relationshipName>Staging_National_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>