Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Rejection_Reason_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Rich_Text__c</fullName>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>