Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Request ID</label>
    <type>AutoNumber</type>
</CustomField>