Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Sale_Ledger_New__c.field-meta.xml
<CustomField>
    <fullName>Sale_Ledger_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Registration Name (Topaz)</label>
    <referenceTo>IP_TopazGlobalClientInformation__c</referenceTo>
    <relationshipLabel>Staging National Accounts</relationshipLabel>
    <relationshipName>Staging_National_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>