Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Sales_Ledger__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ledger__c</fullName>
    <label>Sales Ledger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>