Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Sales_Ledger_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ledger_No__c</fullName>
    <formula>Sale_Ledger_New__r.IP_SalesLedgerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Ledger No</label>
    <type>Text</type>
</CustomField>