Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipName>Staging_National_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>