Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>