Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/fields/Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Unit_ID__c</fullName>
    <label>Unit ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>