Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/recordTypes/Job_Role.recordType-meta.xml
<RecordType>
    <fullName>Job_Role</fullName>
    <active>false</active>
    <label>Job Role</label>
</RecordType>