Frankbelford/uatv1ba/force-app/main/default/objects/Staging_National_Account__c/recordTypes/Site.recordType-meta.xml
<RecordType>
    <fullName>Site</fullName>
    <active>true</active>
    <label>Site</label>
</RecordType>